# triangle_painter_cpp

./: AdvancedPixelPainter.h  CMakeLists.txt  ColorButtonWrapper.h  LightAnimation.h  PainterSettings.h  PainterWindow.h  ParametersPanel.h  PixelPainter.h  Polygon.h  PolygonPainter.h  QtPolygonPainter.h  README.md  SurfacePainter.h  SurfacePainterFactory.h  TriangleSurface.h  TriangleSurfaceController.h  gbGeo.cpp  gbGeo.h  main.cpp  painting.h  ui_parameters.h  ui_parameters.ui
src/: AdvancedPixelPainter.h  BarycentricPixelPainter.h  FillTriangleStrategy.h  LightAnimation.h  PaintCommand.h  PainterSettings.h  PainterWindow.h  ParametersPanel.h  Polygon.h  SurfacePainter.h  SurfacePainterFactory.h  TriangleSurface.h  gbGeo.cpp  gbGeo.h  painting.h  ui_parameters.h  ui_parameters.ui
